minio/manifests/minio-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant-goepp

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console-ingress
  namespace: minio-tenant-goepp
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio-prod.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: minio-goepp-console
          port: 9443
          serversTransport: minio-console-insecure-transport

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-s3-ingress
  namespace: minio-tenant-goepp
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio-s3-prod.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: minio
          port: 443
          serversTransport: minio-console-insecure-transport
